# ULPN

./: .gitignore  EMAILS.md  README.md
backend/: .env.example  Cargo.toml  Dockerfile  README.md  compose.yaml  docker-compose.yml
backend/api/: Cargo.toml  Dockerfile  README.md  ROUTES.md  diesel.toml
backend/api/migrations/2024-05-06-061800_create_users/: down.sql  up.sql
backend/api/migrations/2024-05-06-073234_create_forums/: down.sql  up.sql
backend/api/migrations/2024-05-06-075627_create_identities/: down.sql  up.sql
backend/api/migrations/2024-05-06-075725_create_messages/: up.sql
backend/api/migrations/2024-05-06-102941_create_topics/: down.sql  up.sql
backend/api/migrations/2024-06-10-104853_create_settings/: up.sql
backend/api/src/: main.rs  schema.rs  state.rs
backend/api/src/db/: mod.rs  schema.rs
backend/api/src/db/models/: forum.rs  identity.rs  message.rs  mod.rs  settings.rs  user.rs
backend/api/src/routes/: download.rs  forum.rs  message.rs  mod.rs  settings.rs  user.rs
frontend/: keystore1.jks  settings.gradle.kts
frontend/app/: build.gradle.kts  google-services.json
frontend/app/src/main/: AndroidManifest.xml
frontend/app/src/main/res/drawable/: border_background.xml  side_nav_bar.xml
frontend/app/src/main/res/layout/: activity_card_details.xml  activity_home.xml  activity_main.xml  app_bar_main.xml  fragment_admin.xml  fragment_editforum.xml  fragment_forum.xml  fragment_forum_chat.xml  item_forum.xml  (+2 more)
frontend/gradle/: libs.versions.toml
frontend/gradle/wrapper/: gradle-wrapper.properties
src-tauri/: tauri.conf.json
(+35 files in other folders)
