[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.82"

dotenvy = "0.15.7"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"

actix-web = "4.6.0"

serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"

diesel = { version = "2.1.6", default-features = false, features = ["postgres", "chrono"] }
diesel-async = { version = "0.4.1", features = ["bb8", "postgres"] }
diesel_migrations = "2.1.0"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }

chrono = { version = "0.4.38", features = ["serde"] }
